# velariumai.github.io

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  analysis-directive.txt  index.html  projects.json  pyproject.toml  site-README.md  site-data.js  styles.css  vrm.html
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  sync-project-metadata.yml
benchmarks/: arithmetic_cases.jsonl  contradiction_cases.jsonl  general_knowledge.jsonl  human_ambiguity_cases.jsonl  human_arithmetic_cases.jsonl  human_contradiction_cases.jsonl  human_logic_cases.jsonl  mixed_cases.jsonl  run_benchmark.py  simple_logic_cases.jsonl
benchmarks/gauntlet/: adversarial.jsonl  ambiguity.jsonl  arithmetic.jsonl  contradiction.jsonl  generation.jsonl  ingestion.jsonl  logic.jsonl  mixed.jsonl  scale.jsonl  search.jsonl
docs/: API.md  ARCHITECTURE.md  AUTOMATED_PACK_ECOSYSTEM.md  CAKE.md  CAPABILITY_PACKS.md  CI.md  CONFIG.md  DEPLOYMENT.md  DSL.md  GAUNTLET.md  GENERATION.md  INFERENCE_STABILITY.md  INGESTION.md  KNOWLEDGE.md  LEDGER.md  NO_LLM_POLICY.md  PACKS.md  ROADMAP.md  SEMANTIC_REGIONS.md  TRAINING.md  TRUST.md  VERSIONING.md
domains/: geography.yaml
examples/: file.json
examples/agent/: simple_task.json
examples/cake/: dbpedia_sample.ttl  disallowed_source.json  general_world_scaled_sources.json  general_world_seed.json  general_world_sources.json  malformed_source.json  wikidata_sample.json
examples/compiler/: geography_mapping.json
examples/dsl/: generation_policy.json  invalid_duplicate_ids.json  invalid_unknown_type.json
examples/general_world/: countries_fact_table.json
examples/generation/: contractor_policy_spec.json  incomplete_policy_spec.json  simple_code_spec.json  simple_config_spec.json  simple_plan_spec.json
examples/ingestion/: contradiction_policy.txt  simple_claims.csv  simple_claims.json  simple_claims.jsonl  simple_policy.txt
examples/knowledge/: general_world_expanded.json  general_world_source_validation.json
examples/pipelines/: geography_compile.yaml
examples/trust/: conflicting_claims.jsonl  cross_supported_claims.jsonl  high_risk_policy.json  simple_trust_policy.json  stale_claims.jsonl  trusted_sources.json
examples/workspace/: import_export_example.json  simple_workspace.json
scripts/: build_general_world_dataset.py  generate_general_world_seed.py  update_projects.py
src/vcse/: __init__.py  benchmark.py  benchmark_coverage.py  benchmark_inference_classification.py  cli.py  engine.py
tests/: conftest.py  test_adapters.py  test_agent_cli.py  test_agent_executor.py  test_agent_planner.py  test_agent_state.py  test_agent_task.py  test_agent_tools.py  test_agent_validation.py  test_api.py  test_api_concurrency.py  test_cake_cli.py  test_cake_extractors.py  test_cake_fetcher.py  test_cake_pack_updater.py  test_cake_pipeline.py  test_cake_snapshot.py  test_cake_sources.py  test_claim_clustering.py  test_clarification.py  test_cli.py  test_compression_canonicalizer.py  test_compression_cli.py  test_compression_dictionary.py  test_compression_graph.py  test_compression_interner.py  test_compression_pack_optimizer.py  test_compression_provenance.py  test_compression_roundtrip.py  test_config_and_profile.py  test_coverage_benchmark.py  test_cross_source_validation.py  test_dedup_engine.py  test_domain_specs.py  test_dsl_compiler.py  test_dsl_integration.py  test_dsl_loader.py  test_dsl_registry.py  test_dsl_validator.py  test_extraction.py  (+68 more)
tests/optimizer_full/: metrics.json  original_claims.jsonl
tests/optimizer_test/: encoded_claims.jsonl
tests/roundtrip_full/: graph_index.json
(+274 files in other folders)
