[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcse"
version = "0.5.0"
description = "Verifier-Centered Symbolic Engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "VCSE Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vcse = "vcse.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
