[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcse"
version = "1.9.0"
description = "Verifier-Centered Symbolic Engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "VCSE Contributors" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
]
keywords = ["symbolic-reasoning", "verification", "search", "constraints"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vcse = "vcse.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
