[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcse"
version = "2.9.0"
description = "Verifier-Centered Symbolic Engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "VCSE Contributors" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
]
keywords = ["symbolic-reasoning", "verification", "search", "constraints"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[project.scripts]
vcse = "vcse.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers"]

[tool.coverage.run]
source = ["vcse"]
omit = ["*/tests/*", "*/cake/scheduler.py"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
  "E501",   # line too long — handled by formatter
  "B008",   # function call in default arg (FastAPI pattern)
  "UP007",  # X | Y union syntax — keep for readability
  "B904",   # raise-without-from inside except — several intentional uses
]
per-file-ignores = { "tests/*" = ["B011", "S101"] }

[tool.ruff.lint.isort]
known-first-party = ["vcse"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
no_implicit_reexport = false
check_untyped_defs = true
exclude = ["tests/"]

[tool.bandit]
skips = ["B307", "B603", "B604", "B110"]  # eval in sandboxed agent tools; subprocess with shell; intentional try/except/pass in executor
exclude_dirs = ["tests", ".venv"]
